# what-the-port

./: .gitignore  README.md  conductor.json  package-lock.json  package.json  tsconfig.json
WhatThePort/: Info.plist  Package.swift  build-app.sh
WhatThePort/Sources/WhatThePort/: MenuBarView.swift  PortMonitor.swift  PortScanner.swift  SettingsView.swift  WhatThePortApp.swift
app/: layout.tsx  page.tsx
cli/: package-lock.json  package.json
cli/lib/: scanner.js
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
